--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.3.0-beta3",
+    "@fortawesome/pro-duotone-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/pro-light-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/pro-regular-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/pro-solid-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/pro-thin-svg-icons": "^6.0.0-beta3",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
     "@nuxtjs/proxy": "^2.1.0",
